--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,76 @@
 @import './base.css';
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+* {
+  font-family: 'Poppins', sans-serif;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
+.content{
+  padding: 5rem 2rem;
+}
+
+.content .main-img{
+  width: 83.333333%;
+  margin-bottom: 2.5rem;
+  object-fit: cover;
+  object-position: center;
+}
+
+.content .title-text{
+  font: 600 1.875rem/2.25rem;            
+  letter-spacing: 0.025em;
+  margin-bottom: 0.75rem;
+}
+
+.content .caption-text{
+  margin-bottom: 3rem;
+  color: #504F5E;
+  font-size: 1rem;
+  letter-spacing: 0.025em;
+  line-height: 1.75rem;
+}
+
+.content .btn-set{
+  padding: 1rem 2rem;
+  border-radius: 0.75rem;
+  background-color: #6C5ECF;
+  transition: 0.3s;
+}
+
+.content .btn-set:hover{
+  background-color: #7370FF;
+  transition: 0.3s;
+}
+
+.content .card-item {
   transition: 0.4s;
-  padding: 3px;
+  top: 0px;
+  left: 0px;
+  padding: 1rem 0;
 }
 
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+.content .card-item:hover {
+  top: -3px;
+  left: -3px;
+  transition: 0.4s;
+}
+
+@media (min-width: 576px) {
+  .content{
+    padding: 7rem 2rem;
+  }
+
+  .content .main-img{
+      width: auto;
+  }
+
+  .content .card-item {
+    padding: 1rem;
   }
 }
 
-@media (min-width: 1024px) {
-  body {
-    display: flex;
-    place-items: center;
-  }
-
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+@media (min-width: 992px) {
+  .content .card-item {
+    width: 33.333333%;
   }
 }
